--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://<USERNAME>.github.io/<appdev1-midterm-exam>/",
   "name": "appdev1-midterm-exam",
   "private": true,
   "version": "0.0.0",
@@ -12,6 +13,8 @@
     "deploy": "gh-pages -d dist"
 
   },
+
+  
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
