--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<USERNAME>.github.io/<appdev1-midterm-exam>/",
+  "homepage": "https://mffkht.github.io/appdev1-midterm-exam/",
   "name": "appdev1-midterm-exam",
   "private": true,
   "version": "0.0.0",
