--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<USERNAME>.github.io/<appdev1-midterm-exam>/",
+  "homepage": "https://mffkht.github.io/appdev1-midterm-exam/",
   "name": "appdev1-midterm-exam",
   "private": true,
   "version": "0.0.0",
@@ -11,10 +11,7 @@
     "preview": "vite preview",
     "predeploy": " npm run build",
     "deploy": "gh-pages -d dist"
-
   },
-
-  
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
